--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -91,7 +91,7 @@ set.seed(321)
 <!-- <introducing the problem> -->
 <!-- background of the problem -->
 
-Exploratory data analysis, as coined by John W. Tukey (Tukey 1965) involves many iterations of finding structures and patterns that allow the data to be informative. With temporal data available at finer scales, exploring time series data can become overwhelming with so many possible cyclic temporal granularities [@Gupta2020-vo], which are temporal deconstructions that represent cyclic repetitions in time, e.g. hour-of-day, day-of-month, or any public holidays. These granularities form ordered (for eg. day-of-week where Tue is always followed by Wed, which again is followed by Thu and so on) or unordered categorical variables. Therefore, exploring univariate time series data amounts to exploring the distribution of the measured variable across different categories of the cyclic granularities. \noindent Take the example of the electricity smart meter data used in @wang2020calendar for four households in Melbourne, Australia. Figure \ref{fig:onegran} shows the distribution of energy usage of one household (id 2) across cyclic granularity a) hour-of-day and b) month-of-year. Potentially many such displays could be drawn across day-of-week, day-of-month, weekday/weekend, or any other chosen cyclic granularities of interest. However, all of them would not be interesting to discern important patterns in the energy usage. Only those displays, which have "significant" distributional differences between categories of the cyclic granularity would be informative.
+Exploratory data analysis, as coined by John W. Tukey (Tukey 1965) involves many iterations of finding structures and patterns that allow the data to be informative. With temporal data available at finer scales, exploring time series data can become overwhelming with so many possible cyclic temporal granularities [@Gupta2020-vo], which are temporal deconstructions that represent cyclic repetitions in time, e.g. hour-of-day, day-of-month, or any public holidays. These granularities form ordered (for eg. day-of-week where Tue is always followed by Wed, which again is followed by Thu and so on) or unordered categorical variables. Therefore, exploring univariate time series data amounts to exploring the distribution of the measured variable across different categories of the cyclic granularities. \noindent Take the example of the  = tricity smart meter data used in @wang2020calendar for four households in Melbourne, Australia. Figure \ref{fig:onegran} shows the distribution of energy usage of one household (id 2) across cyclic granularity a) hour-of-day and b) month-of-year. Potentially many such displays could be drawn across day-of-week, day-of-month, weekday/weekend, or any other chosen cyclic granularities of interest. However, all of them would not be interesting to discern important patterns in the energy usage. Only those displays, which have "significant" distributional differences between categories of the cyclic granularity would be informative.
 
 ```{r calendar-elec, fig.height = 8, fig.cap = "Calendar displays faceted by two households are shown. The calendar displays are rich in information and has several components. For example, it can be observed easily that the level of energy consumption by household 2 is higher than household 4. Also, it gives an overview on when these households are away for holidays and which months consumptions are highest (Jan, Feb). However, when it comes to discerning periodic patterns, analyzing all possible periodic patterns through this display is overwhelming due to combination of linear and cyclic representation of time. For example, there is more going on in terms of peaks and troughs in id 2 compared to id 4, but it is not clear which all periodic patterns are dominant and if it differs between households."}
 
@@ -905,7 +905,7 @@ heatplot <- elec_sig_split %>%
         axis.text.x = element_text(angle = 60, hjust=1),legend.position = "bottom") + ggtitle("a") +
   theme(
     strip.background = element_blank(),
-    strip.text.y  = element_blank(), plot.margin = unit(c(0, -2, 0, 0), "cm"))
+    strip.text.y  = element_blank(), plot.margin = unit(c(0, -2, 0, 0), "cm")) + ggtitle("(a)")
   
 elec <- read_rds(here("paper/data/elec_all-8.rds")) %>% 
   dplyr::filter(date(reading_datetime) >= ymd("20190701"), date(reading_datetime) < ymd("20191231"), meter_id==1) %>% 
@@ -943,7 +943,7 @@ elec_zoom <-  elec %>%
   dplyr::filter(date(date_time) > as.Date("2019-09-01") & date(date_time) < (as.Date("2019-09-30"))) %>%
   ggplot(aes(x=date_time, y = kwh)) +
   #geom_point(size = 0.1, colour = "black", alpha = 0.3) +
-  geom_line(size = 0.1, colour = "blue", alpha = 0.6) +
+  geom_line(size = 0.1, colour = "blue") +
   facet_wrap(~id, 
              scales = "free_y",
              ncol = 1,
@@ -951,8 +951,14 @@ elec_zoom <-  elec %>%
              labeller = "label_both") + 
   xlab("Time [30m]") + 
   theme_grey() + 
-  ylab("linear energy demand (kwh) for September") + ggtitle("b") +
-  theme(panel.grid.major.x = element_blank()) 
+  ylab("linear energy demand (kwh) for September") + ggtitle("(b)") +
+  theme(panel.grid.major.x = element_blank()) +
+  scale_x_datetime("Date", date_labels = "%b %d",
+                   breaks = "1 week",
+                   date_minor_breaks = "1 day")  + theme_bw() +
+  theme(panel.grid.major.x =  element_line(colour = "#A9A9A9"),
+        panel.grid.minor.x =  element_line(colour = "#D3D3D3"))
+
 
 heatplot +  facet_grid(id~.) + elec_zoom +
   theme( plot.margin = unit(c(0, 0, 0, 0), "cm")) +
